--- a/css/style.css
+++ b/css/style.css
@@ -327,3 +327,36 @@ h3.my-profession
     flex: 0 0 100%;
     max-width: 100%;
 }
+.about .about-content .about-text
+{
+    flex:  0 0 100%;
+    max-width: 100%;
+}
+.about.about-content .about-text h3
+{
+    font-size: 24px;
+    margin-bottom: 15px;
+    font-weight: 700;
+    color: var(--text-black-900);
+}
+.about .about-content .about-text h3 span
+{
+    color: var(--skin-color);
+}
+.about .about-content .about-text p
+{
+    font-size: 16px;
+    line-height: 25px;
+    color: var(--text-black-700);
+}
+.about .about-content .personal-info
+{
+    flex: 0 0 60%;
+    max-width: 40%;
+    margin-top: 40px;
+}
+.about .about-content .skills
+{
+    flex: 0 0 40%;
+    max-width: 40%;
+}
