--- a/css/style.css
+++ b/css/style.css
@@ -583,3 +583,37 @@ h3.my-profession
     color: var(--text-black-700);
     line-height: 25px;
 }
+/* Portfolio */
+.portfolio .container
+{
+    padding-bottom: 40px;
+}
+.portfolio .portfolio-heading
+{
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 40px;
+}
+.portfolio .portfolio-heading h2
+{
+    color: var(--text-black-900);
+    font-weight: 500;
+}
+.portfolio .progress-item
+{
+    flex:  0 0 33.33%;
+    max-width: 33.33%;
+    margin-bottom: 30px;
+}
+.portfolio .progress-item-inner
+{
+    border: 6px solid var(--bg-black-100);
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+}
+.portfolio .progress-item-inner .progress-img img
+{
+    width: 100%;
+    display: block;
+}
